--- a/.gitignore
+++ b/.gitignore
@@ -4,77 +4,40 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Next.js
+.next/
+out/
+build/
+dist/
 
-# Coverage directory used by tools like istanbul
-coverage/
+# Production
+/build
 
-# nyc test coverage
-.nyc_output
+# Misc
+.DS_Store
+*.pem
 
-# Grunt intermediate storage
-.grunt
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Bower dependency directory
-bower_components
-
-# node-waf configuration
-.lock-wscript
-
-# Compiled binary addons
-build/Release
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
+# Local env files
+.env*.local
 .env
 
-# IDE files
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
+# OS
 Thumbs.db
-
-# Logs
-logs
-*.log
-
-# Temporary files
-*.tmp
-*.temp
-
-# Test files (keep the main ones but exclude debug versions)
-test-gif*.html
-debug-gif.html
-
-# Drone MCP Configuration (optional - remove if you want to commit these)
-# drone-config.js
-# drone-integration.js
-# mcp-config.json
