--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
-  }
+  },
+  "_comment": "Force Vercel to use latest commit with fixed lucide-react@0.541.0"
 }
